feat: 타임리프는 해결..

--- a/src/main/resources/templates/reservationPage.html
+++ b/src/main/resources/templates/reservationPage.html
@@ -134,13 +134,13 @@
                     <div class="row g-3">
                         <div class="col-md-6">
                             <div class="form-floating date" id="date3" data-target-input="nearest">
-                                <input type="text" id="date-picker1" class="form-control bg-white border-0 small" aria-label="Search" aria-describedby="basic-addon2">
+                                <input th:attr="data-unselectable_dates=${reservationUnable.getCheckInUnselectableDate()}" type="text" id="date-picker1" class="form-control bg-white border-0 small" aria-label="Search" aria-describedby="basic-addon2">
                                 <label>입실 일</label>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="form-floating date" id="date4" data-target-input="nearest">
-                                <input type="text" id="date-picker2" class="form-control bg-white border-0 small" aria-label="Search" aria-describedby="basic-addon2">
+                                <input th:attr="data-unselectable_dates=${reservationUnable.getCheckOutUnselectableDate()}" type="text" id="date-picker2" class="form-control bg-white border-0 small" aria-label="Search" aria-describedby="basic-addon2">
                                 <label>퇴실 일</label>
                             </div>
                         </div>
@@ -202,6 +202,11 @@
 <!-- Template Javascript -->
 <script src="/js/main.js"></script>
 <script>
+    // const datesDisabled1 = ['2024-05-05', '2024-05-06', '2024-05-07', '2024-05-09', '2024-05-10', '2024-05-11', '2024-05-14', '2024-05-20', '2024-05-21', '2024-05-22', '2024-05-23', '2024-05-24'];
+    // const datesDisabled2 = ['2024-05-06', '2024-05-07', '2024-05-08', '2024-05-10', '2024-05-11', '2024-05-12', '2024-05-15', '2024-05-21', '2024-05-22', '2024-05-23', '2024-05-24', '2024-05-25'];
+    const datesDisabled1 = $('#date-picker1').data('unselectable_dates');
+    const datesDisabled2 = $('#date-picker2').data('unselectable_dates');
+
     $(function() {
         var selectedDate1 = null;
         var selectedDate2 = null;
@@ -210,15 +215,14 @@
             format: "yyyy-mm-dd",
             startDate: '0d',
             endDate: '+1y',
-            autoclose: true,
-            datesDisabled: ['2024-05-5', '2024-05-6', '2024-05-7', '2024-05-9', '2024-05-10', '2024-05-11', '2024-05-14'],
+            datesDisabled: datesDisabled1,
             todayHighlight: true,
             toggleActive: true,
             weekStart: 0,
         }).on('changeDate', function(selected) {
             selectedDate1 = selected.date; // 선택한 날짜를 변수에 저장
 
-            var disabledDates = ['2024-05-5', '2024-05-6', '2024-05-7', '2024-05-9', '2024-05-10', '2024-05-11', '2024-05-14'];
+            var disabledDates = datesDisabled1;
             var nextAvailableDate = null;
 
             for (var i = 0; i < disabledDates.length; i++) {
@@ -244,17 +248,16 @@
 
         $('#date-picker2').datepicker({
             format: "yyyy-mm-dd",
-            autoclose: true,
             startDate: '0d',
             endDate: '+1y',
-            datesDisabled: ['2024-05-6', '2024-05-7', '2024-05-8', '2024-05-10', '2024-05-11', '2024-05-12', '2024-05-15'],
+            datesDisabled: datesDisabled2,
             todayHighlight: true,
             toggleActive: true,
             weekStart: 0,
         }).on('changeDate', function(selected) {
             selectedDate2 = selected.date; // 선택한 날짜를 변수에 저장
 
-            var disabledDates = ['2024-05-6', '2024-05-7', '2024-05-8', '2024-05-10', '2024-05-11', '2024-05-12', '2024-05-15'];
+            var disabledDates = datesDisabled2;
             var nextAvailableDate = null;
 
             for (var i = disabledDates.length - 1; i >= 0; i--) {
