feat : 메인 인기 지역 Top6 출력 및 사이트 이동

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -242,94 +242,7 @@
         <div class="tab-class text-center">
             <div class="tab-content">
                 <div class="tab-pane fade show p-0 active" id="NationalTab-1">
-                    <div class="row g-4">
-                        <div class="col-md-6 col-lg-4">
-                            <div class="national-item">
-                                <img alt="Image" class="img-fluid w-100 rounded" src="/img/explore-tour-1.jpg">
-                                <div class="national-content">
-                                    <div class="national-info">
-                                        <h5 class="text-white text-uppercase mb-2">Weekend Tour</h5>
-                                        <a class="btn-hover text-white" href="#">View All Place <i class="fa fa-arrow-right ms-2"></i></a>
-                                    </div>
-                                </div>
-                                <div class="national-plus-icon">
-                                    <a class="my-auto" href="#"><i class="fas fa-link fa-2x text-white"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-6 col-lg-4">
-                            <div class="national-item">
-                                <img alt="Image" class="img-fluid w-100 rounded" src="/img/explore-tour-2.jpg">
-                                <div class="national-content">
-                                    <div class="national-info">
-                                        <h5 class="text-white text-uppercase mb-2">Holiday Tour</h5>
-                                        <a class="btn-hover text-white" href="#">View All Place <i class="fa fa-arrow-right ms-2"></i></a>
-                                    </div>
-                                </div>
-                                <div class="national-plus-icon">
-                                    <a class="my-auto" href="#"><i class="fas fa-link fa-2x text-white"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-6 col-lg-4">
-                            <div class="national-item">
-                                <img alt="Image" class="img-fluid w-100 rounded" src="/img/explore-tour-3.jpg">
-                                <div class="national-content">
-                                    <div class="national-info">
-                                        <h5 class="text-white text-uppercase mb-2">Road Trip</h5>
-                                        <a class="btn-hover text-white" href="#">View All Place <i class="fa fa-arrow-right ms-2"></i></a>
-                                    </div>
-                                </div>
-                                <div class="tour-offer bg-info">15% Off</div>
-                                <div class="national-plus-icon">
-                                    <a class="my-auto" href="#"><i class="fas fa-link fa-2x text-white"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-6 col-lg-4">
-                            <div class="national-item">
-                                <img alt="Image" class="img-fluid w-100 rounded" src="/img/explore-tour-4.jpg">
-                                <div class="national-content">
-                                    <div class="national-info">
-                                        <h5 class="text-white text-uppercase mb-2">Historical Trip</h5>
-                                        <a class="btn-hover text-white" href="#">View All Place <i class="fa fa-arrow-right ms-2"></i></a>
-                                    </div>
-                                </div>
-                                <div class="national-plus-icon">
-                                    <a class="my-auto" href="#"><i class="fas fa-link fa-2x text-white"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-6 col-lg-4">
-                            <div class="national-item">
-                                <img alt="Image" class="img-fluid w-100 rounded" src="/img/explore-tour-5.jpg">
-                                <div class="national-content">
-                                    <div class="national-info">
-                                        <h5 class="text-white text-uppercase mb-2">Family Tour</h5>
-                                        <a class="btn-hover text-white" href="#">View All Place <i class="fa fa-arrow-right ms-2"></i></a>
-                                    </div>
-                                </div>
-                                <div class="tour-offer bg-warning">50% Off</div>
-                                <div class="national-plus-icon">
-                                    <a class="my-auto" href="#"><i class="fas fa-link fa-2x text-white"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-6 col-lg-4">
-                            <div class="national-item">
-                                <img alt="Image" class="img-fluid w-100 rounded" src="/img/explore-tour-6.jpg">
-                                <div class="national-content">
-                                    <div class="national-info">
-                                        <h5 class="text-white text-uppercase mb-2">Beach Tour</h5>
-                                        <a class="btn-hover text-white" href="#">View All Place <i class="fa fa-arrow-right ms-2"></i></a>
-                                    </div>
-                                </div>
-                                <div class="national-plus-icon">
-                                    <a class="my-auto" href="#"><i class="fas fa-link fa-2x text-white"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                    <div class="row g-4" id="popular-area"></div>
                 </div>
             </div>
         </div>
