--- a/src/main/resources/templates/list-page.html
+++ b/src/main/resources/templates/list-page.html
@@ -18,15 +18,15 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
 
     <!-- Libraries Stylesheet -->
-    <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
-    <link href="lib/lightbox/css/lightbox.min.css" rel="stylesheet">
+    <link href="/lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+    <link href="/lib/lightbox/css/lightbox.min.css" rel="stylesheet">
 
 
     <!-- Customized Bootstrap Stylesheet -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Template Stylesheet -->
-    <link href="css/style.css" rel="stylesheet">
+    <link href="/css/style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -162,7 +162,7 @@
         <div class="row row-cols-1 row-cols-md-4 g-4">
             <div class="col">
                 <div class="card h-100">
-                    <img src="img/destination-1.jpg" class="card-img-top" alt="...">
+                    <img src="/img/destination-1.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Card title</h5>
                         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
@@ -172,7 +172,7 @@
             </div>
             <div class="col">
                 <div class="card h-100">
-                    <img src="img/destination-1.jpg" class="card-img-top" alt="...">
+                    <img src="/img/destination-1.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Card title</h5>
                         <p class="card-text">This is a short card.</p>
@@ -181,7 +181,7 @@
             </div>
             <div class="col">
                 <div class="card h-100">
-                    <img src="img/destination-1.jpg" class="card-img-top" alt="...">
+                    <img src="/img/destination-1.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Card title</h5>
                         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
@@ -191,7 +191,7 @@
             </div>
             <div class="col">
                 <div class="card h-100">
-                    <img src="img/destination-1.jpg" class="card-img-top" alt="...">
+                    <img src="/img/destination-1.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Card title</h5>
                         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
@@ -201,7 +201,7 @@
             </div>
             <div class="col">
                 <div class="card h-100">
-                    <img src="img/destination-1.jpg" class="card-img-top" alt="...">
+                    <img src="/img/destination-1.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Card title</h5>
                         <p class="card-text">This is a short card.</p>
@@ -210,7 +210,7 @@
             </div>
             <div class="col">
                 <div class="card h-100">
-                    <img src="img/destination-1.jpg" class="card-img-top" alt="...">
+                    <img src="/img/destination-1.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Card title</h5>
                         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
@@ -220,7 +220,7 @@
             </div>
             <div class="col">
                 <div class="card h-100">
-                    <img src="img/destination-1.jpg" class="card-img-top" alt="...">
+                    <img src="/img/destination-1.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Card title</h5>
                         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
@@ -230,7 +230,7 @@
             </div>
             <div class="col">
                 <div class="card h-100">
-                    <img src="img/destination-1.jpg" class="card-img-top" alt="...">
+                    <img src="/img/destination-1.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Card title</h5>
                         <p class="card-text">This is a short card.</p>
@@ -239,7 +239,7 @@
             </div>
             <div class="col">
                 <div class="card h-100">
-                    <img src="img/destination-1.jpg" class="card-img-top" alt="...">
+                    <img src="/img/destination-1.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Card title</h5>
                         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
@@ -249,7 +249,7 @@
             </div>
             <div class="col">
                 <div class="card h-100">
-                    <img src="img/destination-1.jpg" class="card-img-top" alt="...">
+                    <img src="/img/destination-1.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Card title</h5>
                         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
@@ -259,7 +259,7 @@
             </div>
             <div class="col">
                 <div class="card h-100">
-                    <img src="img/destination-1.jpg" class="card-img-top" alt="...">
+                    <img src="/img/destination-1.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Card title</h5>
                         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
@@ -269,7 +269,7 @@
             </div>
             <div class="col">
                 <div class="card h-100">
-                    <img src="img/destination-1.jpg" class="card-img-top" alt="...">
+                    <img src="/img/destination-1.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <a href=""><h5 class="card-title">Card title</h5></a>
                         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
@@ -328,14 +328,14 @@
 <!-- JavaScript Libraries -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
-<script src="lib/easing/easing.min.js"></script>
-<script src="lib/waypoints/waypoints.min.js"></script>
-<script src="lib/owlcarousel/owl.carousel.min.js"></script>
-<script src="lib/lightbox/js/lightbox.min.js"></script>
+<script src="/lib/easing/easing.min.js"></script>
+<script src="/lib/waypoints/waypoints.min.js"></script>
+<script src="/lib/owlcarousel/owl.carousel.min.js"></script>
+<script src="/lib/lightbox/js/lightbox.min.js"></script>
 
 
 <!-- Template Javascript -->
-<script src="js/main.js"></script>
+<script src="/js/main.js"></script>
 </body>
 
 </html>
