--- a/src/main/resources/templates/reservationPage.html
+++ b/src/main/resources/templates/reservationPage.html
@@ -100,11 +100,11 @@
                                                 </div>
                                                 <div class="col-md-10">
                                                     <div class="row g-3 justify-content-end">
-                                                        <div class="col-md-3 text-white text-md-end text-center" style="font-size: 15px;">
-                                                            체크인 : 15:00
+                                                        <div th:text="${'체크 인 : ' + accommodation.checkIn}" class="col-md-3 text-white text-md-end text-center" style="font-size: 15px;">
+                                                            체크 인 표기
                                                         </div>
-                                                        <div class="col-md-3 text-white text-md-end text-center" style="font-size: 15px;">
-                                                            체크 아웃 : 10:00
+                                                        <div th:text="${'체크 아웃 : ' + accommodation.checkOut}" class="col-md-3 text-white text-md-end text-center" style="font-size: 15px;">
+                                                            체크 아웃 표기
                                                         </div>
                                                     </div>
                                                 </div>
@@ -254,7 +254,7 @@
 
         $('#date-picker2').datepicker({
             format: "yyyy-mm-dd",
-            startDate: '+2d',
+            startDate: '+1d',
             endDate: '+1y',
             datesDisabled: datesDisabledCheckOut,
             todayHighlight: true,
@@ -282,7 +282,7 @@
             } else {
                 var startDatePicker2 = new Date(selectedDate2);
                 startDatePicker2.setDate(startDatePicker2.getDate() - 1);
-                $('#date-picker1').datepicker('setStartDate', '+2d');
+                $('#date-picker1').datepicker('setStartDate', '+0d');
                 $('#date-picker1').datepicker('setEndDate', startDatePicker2);
                 // 예약내역 오늘 날짜 지나면 만료 상태로 변경 해줘야 정상 작동.. 더 좋게 없을까
             }
@@ -298,7 +298,7 @@
         }
 
         function updateDatePicker2() {
-            $('#date-picker2').datepicker('setStartDate', selectedDate1 ? selectedDate1 : '+2d');
+            $('#date-picker2').datepicker('setStartDate', selectedDate1 ? selectedDate1 : '+1d');
             $('#date-picker2').datepicker('setEndDate', selectedDate2 ? selectedDate2 : '+1y');
         }
 
