rename : 공통 레이아웃 패키지명 변경 (fragment -> layout)

--- a/src/main/resources/templates/my-accommodation-list.html
+++ b/src/main/resources/templates/my-accommodation-list.html
@@ -31,8 +31,8 @@
 
 <body>
 
-<div th:replace="~{/fragment/top-bar :: top}"></div>
-<div th:replace="~{/fragment/navigation-bar :: nav}"></div>
+<div th:replace="~{/layout/top-bar :: top}"></div>
+<div th:replace="~{/layout/navigation-bar :: nav}"></div>
 
 <!-- Header Start -->
 <div class="container-fluid bg-breadcrumb">
