--- a/src/main/resources/templates/details.html
+++ b/src/main/resources/templates/details.html
@@ -9,12 +9,12 @@
     <meta content="" name="description">
 
     <!-- Google Web Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com" rel="preconnect">
+    <link crossorigin href="https://fonts.gstatic.com" rel="preconnect">
     <link href="https://fonts.googleapis.com/css2?family=Jost:wght@500;600&family=Roboto&display=swap" rel="stylesheet">
 
     <!-- Icon Font Stylesheet -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"/>
+    <link href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" rel="stylesheet"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
 
     <!-- Libraries Stylesheet -->
@@ -31,8 +31,8 @@
 
 <body>
 
-<div th:replace="~{/fragment/top-bar :: top}"></div>
-<div th:replace="~{/fragment/navigation-bar :: nav}"></div>
+<div th:replace="~{/layout/top-bar :: top}"></div>
+<div th:replace="~{/layout/navigation-bar :: nav}"></div>
 
 <!-- Header Start -->
 <div class="container-fluid bg-breadcrumb">
@@ -53,7 +53,7 @@
         <div class="row g-5 align-items-center">
             <div class="col-lg-5">
                 <div class="h-100">
-                    <img src="/img/gallery-2.jpg" class="img-fluid w-100 h-100" alt="">
+                    <img alt="" class="img-fluid w-100 h-100" src="/img/gallery-2.jpg">
                 </div>
             </div>
             <div class="col-lg-7"
@@ -142,7 +142,7 @@
                 </p>
             </div>
             <div class="testimonial-img p-1">
-                <img src="/img/alan.png" class="img-fluid rounded-circle" alt="Image">
+                <img alt="Image" class="img-fluid rounded-circle" src="/img/alan.png">
             </div>
             <div style="margin-top: -35px;">
                 <h5 class="mb-0">Alan AI</h5>
@@ -169,7 +169,7 @@
                 </p>
             </div>
             <div class="testimonial-img p-1">
-                <img src="/img/alan.png" class="img-fluid rounded-circle" alt="Image">
+                <img alt="Image" class="img-fluid rounded-circle" src="/img/alan.png">
             </div>
             <div style="margin-top: -35px;">
                 <h5 class="mb-0">Alan AI</h5>
@@ -232,12 +232,12 @@
                                 </div>
                                 <div class="row mb-4"></div> <!-- 여백을 추가할 빈 줄 -->
                                 <div class="img-container">
-                                    <img src="/img/explore-tour-1.jpg"
+                                    <img alt="Image"
                                          class="img-fluid w-35 mx-auto rounded d-block"
-                                         alt="Image">
-                                    <img src="/img/explore-tour-1.jpg"
+                                         src="/img/explore-tour-1.jpg">
+                                    <img alt="Image"
                                          class="img-fluid w-35 mx-auto rounded d-block"
-                                         alt="Image">
+                                         src="/img/explore-tour-1.jpg">
                                 </div>
                             </div>
                         </div>
@@ -288,12 +288,12 @@
                                 </div>
                                 <div class="row mb-4"></div> <!-- 여백을 추가할 빈 줄 -->
                                 <div class="img-container">
-                                    <img src="/img/explore-tour-1.jpg"
+                                    <img alt="Image"
                                          class="img-fluid w-35 mx-auto rounded d-block"
-                                         alt="Image">
-                                    <img src="/img/explore-tour-1.jpg"
+                                         src="/img/explore-tour-1.jpg">
+                                    <img alt="Image"
                                          class="img-fluid w-35 mx-auto rounded d-block"
-                                         alt="Image">
+                                         src="/img/explore-tour-1.jpg">
                                 </div>
                             </div>
                         </div>
@@ -302,7 +302,7 @@
             </div>
         </div>
         <div class="text-center">
-            <a class="btn btn-primary rounded-pill py-3 px-5 mt-2" style="margin-right: 20px" href="#">리뷰 더보기</a>
+            <a class="btn btn-primary rounded-pill py-3 px-5 mt-2" href="#" style="margin-right: 20px">리뷰 더보기</a>
             <a class="btn btn-primary rounded-pill py-3 px-5 mt-2" href="#">리뷰 등록</a>
         </div>
     </div>
@@ -310,7 +310,7 @@
 <!-- 리뷰 조회 End -->
 
 <!-- Back to Top -->
-<a href="#" class="btn btn-primary btn-primary-outline-0 btn-md-square back-to-top"><i class="fa fa-arrow-up"></i></a>
+<a class="btn btn-primary btn-primary-outline-0 btn-md-square back-to-top" href="#"><i class="fa fa-arrow-up"></i></a>
 
 
 <!-- JavaScript Libraries -->
