--- a/src/main/resources/templates/details.html
+++ b/src/main/resources/templates/details.html
@@ -51,18 +51,18 @@
 <div class="container-fluid about py-5">
     <div class="container py-5">
         <div class="row g-5 align-items-center">
-            <div class="col-lg-5">
+            <div class="col-lg-5" th:each="img:${imgList}">
                 <div class="h-100">
-                    <img src="/img/gallery-2.jpg" class="img-fluid w-100 h-100" alt="">
+                    <img th:src="${img}" class="img-fluid w-100 h-100" alt="">
                 </div>
             </div>
             <div class="col-lg-7"
                  style="background: linear-gradient(rgba(255, 255, 255, .8), rgba(255, 255, 255, .8)), url(/img/about-img-1.png);">
                 <h1 class="mb-4">숙소명 <span class="text-primary" th:text="${accommodation.getName()}"></span></h1>
                 <p class="mb-lg-5" th:text="${accommodation.getContent()}"></p>
-                <div class="row gy-2 gx-4 mb-4">
+                <div class="row gy-2 gx-4 mb-4" th:each="facility:${accommodation.facilityList}">
                     <div class="col-sm-6">
-                        <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>내부시설1</p>
+                        <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i><span th:text="${facility}"></span></p>
                     </div>
                 </div>
             </div>
@@ -80,9 +80,11 @@
                 <p class="mb-lg-5" th:text="'객실 설명 :'+${room.content}"></p>
                 <p th:text="'이용 안내 :'+${room.useGuide}">
                 </p>
-                <div class="row gy-2 gx-4 mb-4">
+                <div class="row gy-2 gx-4 mb-4" th:each="facility:${room.getFacilityList()}">
                     <div class="col-sm-6">
-                        <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>편의시설1
+                        <p class="mb-0">
+                            <i class="fa fa-arrow-right text-primary me-2"></i>
+                            <span th:utext="${facility}"></span>
                         </p>
                     </div>
                 </div>
@@ -145,8 +147,8 @@
 
 <!-- 리뷰 조회 Start -->
 <div class="bg-light">
-    <div class="container service py-5" th:each="review:${reviewList}">
-        <div class="container py-5">
+    <div class="container service py-5">
+        <div class="container py-5" th:each="review:${reviewList}">
             <div class="row g-3">
                 <div class="col-lg-12">
                     <div class="row g-3">
@@ -196,7 +198,7 @@
         </div>
         <div class="text-center">
             <a class="btn btn-primary rounded-pill py-3 px-5 mt-2" style="margin-right: 20px" href="#">리뷰 더보기</a>
-            <a class="btn btn-primary rounded-pill py-3 px-5 mt-2" href="#">리뷰 등록</a>
+            <a class="btn btn-primary rounded-pill py-3 px-5 mt-2" th:href="@{${accommodation.getId()}+'/comment'}">리뷰 등록</a>
         </div>
     </div>
 </div>
