--- a/src/main/resources/templates/reservationPage.html
+++ b/src/main/resources/templates/reservationPage.html
@@ -134,13 +134,13 @@
                     <div class="row g-3">
                         <div class="col-md-5">
                             <div class="form-floating date" id="date3" data-target-input="nearest">
-                                <input name="startDate" th:attr="data-unselectable_dates=${reservationUnable.getCheckInUnselectableDate()}" type="date" id="date-picker1" class="form-control bg-white border-0 small" aria-label="Search" aria-describedby="basic-addon2">
+                                <input name="startDate" th:attr="data-unselectable_dates=${reservationUnable.getCheckInUnselectableDate()}" type="text" id="date-picker1" class="form-control bg-white border-0 small" aria-label="Search" aria-describedby="basic-addon2">
                                 <label>입실 일 선택</label>
                             </div>
                         </div>
                         <div class="col-md-5">
                             <div class="form-floating date" id="date4" data-target-input="nearest">
-                                <input name="endDate" th:attr="data-unselectable_dates=${reservationUnable.getCheckOutUnselectableDate()}" type="date" id="date-picker2" class="form-control bg-white border-0 small" aria-label="Search" aria-describedby="basic-addon2">
+                                <input name="endDate" th:attr="data-unselectable_dates=${reservationUnable.getCheckOutUnselectableDate()}" type="text" id="date-picker2" class="form-control bg-white border-0 small" aria-label="Search" aria-describedby="basic-addon2">
                                 <label>퇴실 일 선택</label>
                             </div>
                         </div>
