--- a/src/main/resources/templates/reservationPage.html
+++ b/src/main/resources/templates/reservationPage.html
@@ -355,10 +355,12 @@
                 // 요청이 성공적으로 처리되면, 여기서 UI를 업데이트하거나 페이지를 새로고침할 수 있습니다.
                 alert('예약 신청이 완료되었습니다.');
                 return response.json();
+                //TODO: 나중에 내정보 페이지로 가도록 하면 될 듯
+                window.location.href = '/';
             })
             .catch(error => {
                 console.error('Error:', error);
-                alert('예약 신청 중 오류가 발생했습니다.');
+                alert('예약 신청 중 오류가 발생했습니다.입력한 날짜를 확인해 주세요');
             });
     });
 </script>
